Fixes for Ubuntu

--- a/roles/install-rita-exit/tasks/systemd.yml
+++ b/roles/install-rita-exit/tasks/systemd.yml
@@ -58,7 +58,7 @@
   command: systemctl status rita-exit
   ignore_errors: yes
   changed_when: false
-  register: rita_exit_status
+  register: service_rita_exit_status
 
 - name: Report status of Rita-exit
   fail:
